--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,11 @@
-<h1 id="alodao-components">Alodao components</h1>
-<h2 id="about-alodao">About alodao</h2>
-<h2 id="our-creations">Our creations</h2>
-<h4 id="menu-wheel">Menu wheel</h4>
-<p>UI component that allows you to create a circular menu. With a menu like this, all options are equally spaced around the center - that makes it very easy for users to familiarize themselves with the layout and be able to accomplish what they want very quickly.</p>
-<h2 id="about-me">About me</h2>
+<head>
+    <title>Alodao components</title>
+</head>
+<body>
+    <h1 id="alodao-components">Alodao components</h1>
+    <h2 id="about-alodao">About alodao</h2>
+    <h2 id="our-creations">Our creations</h2>
+    <h4 id="menu-wheel">Menu wheel</h4>
+    <p>UI component that allows you to create a circular menu. With a menu like this, all options are equally spaced around the center - that makes it very easy for users to familiarize themselves with the layout and be able to accomplish what they want very quickly.</p>
+    <h2 id="about-me">About me</h2>
+</body>
