Added wheel to portfolio

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>Alodao components</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -113,7 +113,7 @@
                 <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-12 ml-auto">
-                        <p class="pre-wrap lead">I was interested in programming from a young age, starting with C++. Later I learned Python and got interested in game development  as a hobby. I quickly moved to Unity as it made turning ideas into reality a very quick process. Recently I acquired an undergrad degree in computer science and became a professional software developer developing commercial NAS software using Python. I still love trying out different game ideas, but have no time to fully develop them. I decided instead to sell worthwhile things I create through the Unity Asset Store.</p>
+                        <p class="pre-wrap lead">I was interested in programming from a young age, starting with C++. Later I learned Python and got interested in game development  as a hobby. I quickly moved to Unity as it made turning ideas into reality a very quick process. Recently I acquired an undergrad degree in computer science and became a professional software developer developing commercial NAS software using Python. I still love trying out different game ideas, but have no time to fully develop them. I decided instead to flesh out some worthwhile parts of my projects and provide them to people through the Unity Asset Store.</p>
                     </div>
 
                 </div>
