List of relevant work

--- a/static/index.html
+++ b/static/index.html
@@ -119,6 +119,30 @@
                 </div>
             </div>
         </section>
+        <section class="page-section bg-primary text-white mb-0" id="relevant">
+            <div class="container">
+                <!-- About Section Heading-->
+                <div class="text-center">
+                    <h2 class="page-section-heading d-inline-block text-white">RELEVANT WORK / PERSONAL PROJECTS</h2>
+                </div>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
+                    <div class="col-lg-12 ml-auto">
+                        <ul class="list-unstyled">
+                            <li class="list-group-item text-secondary">Currently employed as Python programmer</li>
+                            <li class="list-group-item text-secondary">Program for recognizing poker hands - <a href="https://github.com/KrTG/PokerHandDetection">github</a></li>
+                            <li class="list-group-item text-secondary">Simple client and server for real time chat in Python - <a href="https://github.com/KrTG/ChatClientServer">github</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
