--- a/static/index.html
+++ b/static/index.html
@@ -87,9 +87,9 @@
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image--><img class="img-fluid rounded mb-5" src="assets/img/portfolio/menu_wheel_promo.png" alt="Menu Wheel"/>
-                                    <!-- Portfolio Modal - Text-->
+                                    <!-- Portfolio Modal - Image--><a href="https://assetstore.unity.com/packages/slug/174085"><img class="img-fluid rounded mb-5" src="assets/img/portfolio/menu_wheel_promo.png" alt="Menu Wheel"/></a>
                                     <p class="mb-5">UI component that allows you to create a circular menu. With a menu like this, all options are equally spaced around the center - that makes it very easy for users to familiarize themselves with the layout and be able to accomplish what they want very quickly.</p>
+                                    <p class="mb-5">Unity Asset Store page - <a href="https://assetstore.unity.com/packages/slug/174085">link</a></p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                 </div>
                             </div>
